--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "api-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",  
+  "main": "index.js",
   "author": "",
-  "license": "MIT"  
+  "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "start": "node test.js"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1"
+  }
 }
